@@ -6,27 +6,28 @@
     <script type="text/javascript" src='../lib/jquery-1.9.1.min.js'></script>
     <style type="text/css">
 
-        .openseadragon1 {
-            width: 800px;
-            height: 600px;
-        }
-
     </style>
 </head>
 <body>
     <div>
         Simple demo page to show a default OpenSeadragon viewer.
     </div>
-    <div id="contentDiv" class="openseadragon1"></div>
-    <script type="text/javascript">
+    <div id="container" style="display: none;">
+        <div id="openseadragon1" style="width: 800px; height: 600px;"></div>
+    </div>
 
-        var viewer = OpenSeadragon({
-            // debugMode: true,
-            id: "contentDiv",
+    <script>
+        const viewer = OpenSeadragon({
+            id: "openseadragon1",
             prefixUrl: "../../build/openseadragon/images/",
-            tileSources: "../data/testpattern.dzi",
-            showNavigator: true,
+            tileSources: "../data/testpattern.dzi"
         });
+
+        // Simulate container becoming visible after a delay
+        setTimeout(() => {
+            document.getElementById("container").style.display = "block";
+        }, 2000);
     </script>
+
 </body>
 </html>
